// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutesView should render one route contains only destination station 1`] = `
<div
  className="ant-collapse ant-collapse-borderless"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <i
        className="anticon anticon-right arrow"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      Via line CC, station final
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <ul
          className="ant-timeline"
        >
          <li
            className="ant-timeline-item ant-timeline-item-last"
          >
            <div
              className="ant-timeline-item-tail"
            />
            <div
              className="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
              style={
                Object {
                  "borderColor": undefined,
                }
              }
            >
              <i
                className="anticon anticon-login"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="login"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 0 1 520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 0 1 270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 0 1 0 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                  />
                </svg>
              </i>
            </div>
            <div
              className="ant-timeline-item-content"
            >
              <b>
                Take line 
                CC
                 from station 
                begin
                 to station 
                final
              </b>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`RoutesView should render one route contains only one station 1`] = `
<div
  className="ant-collapse ant-collapse-borderless"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <i
        className="anticon anticon-right arrow"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      Via line CC, station A
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <ul
          className="ant-timeline"
        >
          <li
            className="ant-timeline-item"
          >
            <div
              className="ant-timeline-item-tail"
            />
            <div
              className="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
              style={
                Object {
                  "borderColor": undefined,
                }
              }
            >
              <i
                className="anticon anticon-login"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="login"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 0 1 520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 0 1 270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 0 1 0 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                  />
                </svg>
              </i>
            </div>
            <div
              className="ant-timeline-item-content"
            >
              <b>
                Take line 
                CC
                 from station 
                begin
                 to station 
                A
              </b>
            </div>
          </li>
          <li
            className="ant-timeline-item ant-timeline-item-last"
          >
            <div
              className="ant-timeline-item-tail"
            />
            <div
              className="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
              style={
                Object {
                  "borderColor": undefined,
                }
              }
            >
              <i
                className="anticon anticon-logout"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="logout"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 0 1-112.7 75.9A352.8 352.8 0 0 1 512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 0 1-112.7-75.9 353.28 353.28 0 0 1-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 0 0 0-12.6z"
                  />
                </svg>
              </i>
            </div>
            <div
              className="ant-timeline-item-content"
            >
              <b>
                Take line 
                DT
                 from station 
                A
                 to station 
                final
              </b>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`RoutesView should render one route contains two interchange stations 1`] = `
<div
  className="ant-collapse ant-collapse-borderless"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <i
        className="anticon anticon-right arrow"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      Via line CC, station A
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <ul
          className="ant-timeline"
        >
          <li
            className="ant-timeline-item"
          >
            <div
              className="ant-timeline-item-tail"
            />
            <div
              className="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
              style={
                Object {
                  "borderColor": undefined,
                }
              }
            >
              <i
                className="anticon anticon-login"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="login"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 0 1 520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 0 1 270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 0 1 0 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                  />
                </svg>
              </i>
            </div>
            <div
              className="ant-timeline-item-content"
            >
              <b>
                Take line 
                CC
                 from station 
                begin
                 to station 
                A
              </b>
            </div>
          </li>
          <li
            className="ant-timeline-item"
          >
            <div
              className="ant-timeline-item-tail"
            />
            <div
              className="ant-timeline-item-head ant-timeline-item-head-blue"
              style={
                Object {
                  "borderColor": undefined,
                }
              }
            />
            <div
              className="ant-timeline-item-content"
            >
              <b>
                Take line 
                CE
                 from station 
                A
                 to station 
                B
              </b>
            </div>
          </li>
          <li
            className="ant-timeline-item ant-timeline-item-last"
          >
            <div
              className="ant-timeline-item-tail"
            />
            <div
              className="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
              style={
                Object {
                  "borderColor": undefined,
                }
              }
            >
              <i
                className="anticon anticon-logout"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="logout"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 0 1-112.7 75.9A352.8 352.8 0 0 1 512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 0 1-112.7-75.9 353.28 353.28 0 0 1-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 0 0 0-12.6z"
                  />
                </svg>
              </i>
            </div>
            <div
              className="ant-timeline-item-content"
            >
              <b>
                Take line 
                DT
                 from station 
                B
                 to station 
                final
              </b>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
